--- a/css/styles.css
+++ b/css/styles.css
@@ -100,4 +100,11 @@ body {
       text-decoration: none;
       color: #E6E6E6; }
 
+.gamebody {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 /*# sourceMappingURL=styles.css.map */
