--- a/css/styles.scss
+++ b/css/styles.scss
@@ -123,3 +123,11 @@ body {
     }
   }
 }
+
+.gamebody {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
